--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://<bmlt12>.github.io/educon1",
+    "homepage": "https://bmlt12.github.io/educon1",
     "name": "vite_react_shadcn_ts",
     "private": true,
     "version": "0.0.0",
